# snowflake_reference_architecture

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  requirements-dev.txt
.github/workflows/: dbt_main_cd.yml  dbt_pr_ci.yml  dbt_snowflake_native_cd.yml  dcm_deploy.yml  terraform_plan.yml
airflow/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
airflow/dags/: claims_dbt_cosmos_dag.py  x12_to_json_dag.py
data_generator/: README.md  generate_synthetic_claims.py  requirements.txt
data_generator/synthea/: README.md  run_synthea.sh  synthea_to_x12.py
dbt/: dbt_project.yml  package-lock.yml.disabled  packages.yml  packages.yml.disabled  profiles.yml.example
dcm/: README.md  manifest.yml
docs/: architecture.md  ci_cd.md  cortex_mcp_setup.md  data_control_model.md  data_model.md  dbt_on_snowflake.md  demo_script.md  demo_script_for_interviews.md  incremental_strategy.md  runbook.md  test_findings.md  workbooks.md  x12_synthea_pipeline.md
k8s/: Dockerfile  README.md  deploy.sh  snowflake-connection.secret.example.yaml  values.yaml
mcp/: README.md
mcp/fallback_custom_server/: .env.example  README.md  pyproject.toml  server.py
mcp/fallback_custom_server/tools/: __init__.py  cortex_analyst_client.py  safe_sql.py  semantic_catalog.py  snowflake_connection.py
semantic/: README.md  claims_runbook_seed.sql  cortex_analyst_claims_semantic_model.yaml  cortex_search_objects.sql  data_dictionary_seed.sql  metric_registry_seed.sql  semantic_view_claims.sql  verified_queries.yml
snowflake/: connections.toml.example
terraform/: main.tf  providers.tf  variables.tf
x12/: Dockerfile  README.md  go.mod  go.sum  main.go  sample_837p.flat.json
(+141 files in other folders)
